# modrinth-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  pom.xml
.github/workflows/: build.yml  release.yml
src/: download.rs  download_cache.rs  install_cache.rs  main.rs  modrinth.rs
src/main/java/me/geek/tom/modrinthcli/: ModrinthCli.java
src/main/java/me/geek/tom/modrinthcli/exception/: VersionNotFoundException.java
src/main/java/me/geek/tom/modrinthcli/installcache/: InstalledModsCacheFile.java
src/main/java/me/geek/tom/modrinthcli/modrinthapi/: ModDetails.java  ModVersion.java  ModrinthApi.java
src/main/java/me/geek/tom/modrinthcli/pack/: ModInfo.java  Pack.java  PackFile.java
src/main/java/me/geek/tom/modrinthcli/util/: CachedDownloader.java  DateDeserialiser.java  Logger.java  VersionPair.java
src/main/java/me/geek/tom/modrinthcli/util/cache/: CachedDownloader.java  DownloadTarget.java
