[package]
name = "modrinth-cli"
version = "0.1.0"
authors = ["Tom_The_Geek <23531706+Geek202@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
indicatif = "0.15.0"
ring = "0.16.20"
reqwest = { version = "0.11.0", features = ["json", "stream"] }
tokio = { version = "1.2.0", features = ["macros", "fs", "io-util", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.21"
chrono = { version = "0.4", features = ["serde"] }
home = "0.5.3"
serde_json = "1.0"
